# auratrade-platform

./: .gitignore  README.md  docker-compose.yml  phase1.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0002_phase2_auth_wallets.py  20260318_01_add_user_role_username_status.py
backend/app/: main.py  seed.py
backend/app/api/: ai.py  alerts.py  auth.py  deps.py  health.py  orders.py  router.py  settings.py  wallet.py  websocket_routes.py
backend/app/core/: config.py  database.py  logging.py  monitoring.py  redis.py
backend/app/events/: __init__.py  event_publisher.py
backend/app/models/: __init__.py  alert_rule.py  alert_trigger_event.py  order.py  position.py  sentiment.py  trade.py  transaction.py  user.py  user_settings.py  wallet.py
backend/app/repositories/: __init__.py  alert_rule_repository.py  order_repository.py  position_repository.py  trade_repository.py  transaction.py  user.py  user_settings.py  wallet.py
backend/app/schemas/: __init__.py  alerts.py  analytics.py  auth.py  coach.py  market.py  notification.py  order.py  position.py  sentiment.py  settings.py  trade.py  wallet.py
backend/app/services/: alert_rule_service.py  analytics_service.py  auth.py  auth_service.py  market_data.py  market_data_service.py  notification_service.py  order_service.py  position_service.py  rate_limit_service.py  sentiment_service.py  settings_service.py  trading_coach_service.py  (+3 more)
backend/tests/: test_alert_rule_service.py  test_market_data_service.py
(+103 files in other folders)
