[project]
name = "auratrade-backend"
version = "0.1.0"
description = "AuraTrade paper trading platform backend"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "gunicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis",
    "celery",
    "httpx",
    "apscheduler",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt",
    "pwdlib",
    "argon2-cffi",
    "pydantic-settings",
    "alembic",
    "python-dotenv",
]

[tool.fastapi]
entrypoint = "app.main:app"
